# geocode

./: .gitignore  CMakeLists.txt  GeocodeConfig.cmake  README.md
docker/: Dockerfile  build.sh  env.sh
docker/scripts/: entrypoint.sh
src/lib/: CMakeLists.txt
src/lib/geocode/: geocode.h  geocode.hpp
src/lib/geocode/impl/: codearea.cpp  geocode.cpp  openlocationcode.cpp  openlocationcode.hpp
src/log/: CMakeLists.txt  NanoLog.cpp  NanoLog.h
src/shell/: CMakeLists.txt  main.cpp
test/unit/: CMakeLists.txt  address.cpp  centroid.cpp  cluster.cpp  distance.cpp  encode.cpp  main.cpp
